Update download and CSV file creation.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     container_name: gh_archive_analysis
     image: gh_archive_analysis:latest
     build: .
-    restart: unless-stopped
+    restart: on-failure
     volumes:
       - ./gh_archive_csv/:/usr/src/app/gh_archive_csv/
       - ./gh_archive_zip_files/:/usr/src/app/gh_archive_zip_files/
